tests/files/type_checker_tests/should_fail/034.cmdr
//Should fail when adding incompatible types
x = 3 + false;
